proper stream management queue control (system resource control)
